# galax-renderer

./: .directory  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  Extensions.h  main.cpp
src/assets/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  JsonHelper.h  ObjReader.cpp  ObjReader.h  PlanetConfig.h  PngReader.h  SceneInfo.h  SceneLoader.cpp  SceneLoader.h
src/effects/: Bloom.cpp  Bloom.h  Outline.cpp  Outline.h
src/generators/: ISceneGenerator.h  PlanetGenerator.cpp  PlanetGenerator.h  PlanetLoader.cpp  PlanetLoader.h  PlanetMeshGenerator.cpp  PlanetMeshGenerator.h  SceneGenerator.cpp  SceneGenerator.h  SolarSystemGenerator.cpp  SolarSystemGenerator.h  SolarSystemLoader.cpp  SolarSystemLoader.h  SunLoader.cpp  SunLoader.h
src/orbital/: Atmosphere.cpp  Atmosphere.h  FeedbackProgram.cpp  FeedbackProgram.h  Gravity.cpp  Gravity.h  OrbitAnimation.cpp  OrbitAnimation.h  Planet.cpp  Planet.h  SolarSystem.cpp  SolarSystem.h  SpaceCamera.cpp  SpaceCamera.h  Sun.cpp  Sun.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h  Timer.h
src/physics/impl/: Force.h  PhysicalNode.cpp  PhysicalNode.h  RigidBody.cpp  RigidBody.h  SphereCollider.cpp  SphereCollider.h
src/physics/interfaces/: ICollider.h  IForce.h  IRigidBody.h
src/renderer/: GBuffer.cpp  GBuffer.h  LightingModel.cpp  LightingModel.h  PostProcessEffect.cpp  PostProcessEffect.h  QRenderer.cpp  QRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/renderer/impl/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PostProcessEffect.cpp  PostProcessEffect.h  Program.cpp  Program.h  Quad.cpp  Quad.h  RenderNode.cpp  RenderNode.h  SSBO.cpp  SSBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h
src/renderer/input/: InputHandler.cpp  InputHandler.h
src/renderer/interfaces/: IAnimation.h  ICamera.h  IFrameBuffer.h  ILight.h  IMesh.h  INode.h  IPostProcessEffect.h  IProgram.h  IRenderNode.h  ISSBO.h  IShader.h  ITexture.h  IUniform.h
src/renderer/scene_objects/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Program.cpp  (+7 more)
(+87 files in other folders)
